--- a/scripts/index.html
+++ b/scripts/index.html
@@ -18,7 +18,7 @@
             <li>Improved theming support based on Eclipse 4 improvements</li>
             <li>A fast editor supporting many languages builtin. <a href="languages.html">View supported languages.</a></li>
             <li>A simple way to add support for a new language</li>
-            <li>Usability improvements for all Eclipse editors</li>
+            <li>Usability improvements for all Eclipse editors (such as multi-edition and vertical indent guides)</li>
             <li>Bundling of many useful plugins in a single package</li>
             <li>Native installers</li>
         </ul>
@@ -29,6 +29,15 @@
         </p>
         <p><img src="images/theming.png"></p>
         
+        <h3>Release Highlights for LiClipse 1.2.1</h3>
+        <ul>
+            <strong>Indent Guides</strong>
+            <ul>
+                <li>Vertical indent guides are now available (applied to all Eclipse editors by default)</li>
+                <li>Options may be configured at Preferences > LiClipse > Vertical Indent Guide</li>
+            </ul>
+            <li>Upgraded to PyDev 3.9.0</li>
+        </ul>
         <h3>Release Highlights for LiClipse 1.2.0</h3>
         <ul>
             <li>It's now possible to specify the JSHint configuration for a project. View <a href="customize_javascript.html">JavaScript editor customization for details</a></li>
@@ -50,7 +59,7 @@
         <p>The HTML editor has advanced context-based code-completion</p>
         <p>The HTML, XML and JavaScript editors have code-analysis and code-formatting features</p>
         <h3>Usability improvements for all Eclipse editors</h3>
-        <p>At this point, the major improvement is multi-edition supporting all editors
+        <p>At this point, the major improvement is multi-edition and vertical indent guides, supporting all editors
             (such as PyDev, JDT, etc).
         </p>
         <p>See: <a href="multi_edition_video.html">Multi-Edition Video</a> for details</p>
