--- a/download.html
+++ b/download.html
@@ -27,8 +27,8 @@
         <!-- end tracking -->
 
         <div>
-            <div style="position: fixed; top: 0px; left: 0px; width:100%; background-color:white; border-bottom: 1px solid black;">
-            	<div style="width: 860px; margin: 0 auto;">
+            <div class="top_header_outer" style="top: 0px; left: 0px; width:100%; background-color:white; border-bottom: 1px solid black;">
+            	<div class="top_header">
 	                <a href="index.html">Main</a>
 	                <a href="faq.html" style="padding-left:1.5em;">FAQ</a>
 	                <a href="manual.html" style="padding-left:1.5em;">Manual</a>
@@ -41,7 +41,7 @@
         <div class="wrapper">
             <header>
                 
-<h1>LiClipse</h1>
+<h1 class="header_liclipse">LiClipse</h1>
 <p>Lightweight editors, theming and usability improvements for Eclipse</p>
 <!-- <p class="view"><a href="https://github.com/brainwy/liclipse.page">
     View the Project on GitHub <small>brainwy/liclipse.page</small></a></p> -->
@@ -84,28 +84,32 @@ Pricing: A LiClipse license is US$ 80<br><br><br>
         <br/>
         <ul>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_win32.x86_64.exe">LiClipse 1.2.0 for Windows (64 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_win32.x86_64.exe">LiClipse 1.2.1 for Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_win32.x86.exe">LiClipse 1.2.0 for Windows (32 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_win32.x86.exe">LiClipse 1.2.1 for Windows (32 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_macosx.cocoa.x86_64.dmg">LiClipse 1.2.0 for Mac OS (64 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_macosx.cocoa.x86_64.dmg">LiClipse 1.2.1 for Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_linux.gtk.x86_64.tar.gz">LiClipse 1.2.0 for Linux (64 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_linux.gtk.x86_64.tar.gz">LiClipse 1.2.1 for Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_linux.gtk.x86.tar.gz">LiClipse 1.2.0 Linux (32 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_linux.gtk.x86.tar.gz">LiClipse 1.2.1 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/UPDATE SITE 1.2.0.zip">LiClipse 1.2.0 Local Update Site</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/UPDATE SITE 1.2.1.zip">LiClipse 1.2.1 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
-        Older versions may be downloaded from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>
+        It's possible to verify the MD5 of the downloaded file in:
+        <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/MD5_AND_INSTALL%20INSTRUCTIONS.txt">LiClipse 1.2.1 files MD5</a>.
+        <br/>
+        <br/>
+        Older versions may be downloaded from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>
         (install instructions below for each platform).
 
         <br/>
@@ -136,7 +140,7 @@ Pricing: A LiClipse license is US$ 80<br><br><br>
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -146,7 +150,7 @@ Pricing: A LiClipse license is US$ 80<br><br><br>
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -185,7 +189,7 @@ Pricing: A LiClipse license is US$ 80<br><br><br>
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>.
+        Download the .tar.gz from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -222,7 +226,7 @@ Pricing: A LiClipse license is US$ 80<br><br><br>
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>,
+        <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>,
         extract it in a folder, then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
