--- a/languages.html
+++ b/languages.html
@@ -27,8 +27,8 @@
         <!-- end tracking -->
 
         <div>
-            <div style="position: fixed; top: 0px; left: 0px; width:100%; background-color:white; border-bottom: 1px solid black;">
-            	<div style="width: 860px; margin: 0 auto;">
+            <div class="top_header_outer" style="top: 0px; left: 0px; width:100%; background-color:white; border-bottom: 1px solid black;">
+            	<div class="top_header">
 	                <a href="index.html">Main</a>
 	                <a href="faq.html" style="padding-left:1.5em;">FAQ</a>
 	                <a href="manual.html" style="padding-left:1.5em;">Manual</a>
@@ -41,7 +41,7 @@
         <div class="wrapper">
             <header>
                 
-<h1>LiClipse</h1>
+<h1 class="header_liclipse">LiClipse</h1>
 <p>Lightweight editors, theming and usability improvements for Eclipse</p>
 <!-- <p class="view"><a href="https://github.com/brainwy/liclipse.page">
     View the Project on GitHub <small>brainwy/liclipse.page</small></a></p> -->
