--- a/scripts/download.html
+++ b/scripts/download.html
@@ -22,28 +22,32 @@
         <br/>
         <ul>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_win32.x86_64.exe">LiClipse 1.2.0 for Windows (64 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_win32.x86_64.exe">LiClipse 1.2.1 for Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_win32.x86.exe">LiClipse 1.2.0 for Windows (32 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_win32.x86.exe">LiClipse 1.2.1 for Windows (32 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_macosx.cocoa.x86_64.dmg">LiClipse 1.2.0 for Mac OS (64 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_macosx.cocoa.x86_64.dmg">LiClipse 1.2.1 for Mac OS (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_linux.gtk.x86_64.tar.gz">LiClipse 1.2.0 for Linux (64 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_linux.gtk.x86_64.tar.gz">LiClipse 1.2.1 for Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/liclipse_1.2.0_linux.gtk.x86.tar.gz">LiClipse 1.2.0 Linux (32 bits)</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/liclipse_1.2.1_linux.gtk.x86.tar.gz">LiClipse 1.2.1 Linux (32 bits)</a>
             </li>
             <li>
-                <a href="https://googledrive.com/host/0BwwQN8QrgsRpeGNtU181VnNtczg/UPDATE SITE 1.2.0.zip">LiClipse 1.2.0 Local Update Site</a>
+                <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/UPDATE SITE 1.2.1.zip">LiClipse 1.2.1 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit versions should only be used if you're really in a 32 bit machine.
         <br/>
         <br/>
-        Older versions may be downloaded from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>
+        It's possible to verify the MD5 of the downloaded file in:
+        <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E/LiClipse%201.2.1/MD5_AND_INSTALL%20INSTRUCTIONS.txt">LiClipse 1.2.1 files MD5</a>.
+        <br/>
+        <br/>
+        Older versions may be downloaded from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>
         (install instructions below for each platform).
 
         <br/>
@@ -74,7 +78,7 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -84,7 +88,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .dmg file from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>, mount it as a disk and copy it (drag it) to the Applications dir.
         <br/>
         <br/>
 
@@ -123,7 +127,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>.
+        Download the .tar.gz from <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>.
         <br/>
         <br/>
         Note: 64 bits installers, end with x86_64 and 32 bit installers end with x86.
@@ -160,7 +164,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://drive.google.com/folderview?id=0BwwQN8QrgsRpLVlDeHRNemw3S1E&amp;usp=sharing#list">Google Drive</a>,
+        <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>,
         extract it in a folder, then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
