Minor change in templates.

--- a/templates.html
+++ b/templates.html
@@ -65,7 +65,7 @@
         ends with a .liclipse in that folder is considered a LiClipse language file).
         <br>
         <br>
-        Also, it's possible to extend an existing language to add templates to it. For that, create a '${any.name}.extends.liclipse' file
+        Also, it's possible to extend an existing language to add templates to it. For that, create a '${any.name}.extend.liclipse' file
         in any of the tracked directories with the structure:
         <br>
         <br>
