--- a/history.html
+++ b/history.html
@@ -75,6 +75,26 @@ Pricing: A LiClipse license is US$ 80<br><br><br>
             <section>
                 
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 1.2.1</h3>
+        <ul>
+            <strong>Indent Guides</strong>
+            <ul>
+                <li>Vertical indent guides are now available (applied to all Eclipse editors by default)</li>
+                <li>Options may be configured at Preferences > LiClipse > Vertical Indent Guide</li>
+            </ul>
+            <li>Upgraded to PyDev 3.9.0</li>
+        </ul>
+        <h3>Release Highlights for LiClipse 1.2.0</h3>
+        <ul>
+            <li>It's now possible to specify the JSHint configuration for a project. View <a href="customize_javascript.html">JavaScript editor customization for details</a></li>
+            <li>It's now possible to specify the HTML code analysis/code formatting configuration for a project. View <a href="customize_html.html">HTML editor customization for details</a></li>
+            <li>JSHint updated to the latest version (2.5.4)</li>
+            <li>Regular expressions on javascript are now properly colored</li>
+            <li>The Javascript editor now supports ES6 (EcmaScript 6) constructs (but JSHint analysis must be manually configured to accept those constructs)</li>
+            <li>AnyEdit no longer removing trailing chars by default (only for LiClipse standalone)</li>
+            <li>Upgraded to PyDev 3.8.0</li>
+            <li>Upgraded to latest EGit</li>
+        </ul>
 
         <h3>Release Highlights for LiClipse 1.1.2</h3>
         <ul>
