--- a/supported_languages.html
+++ b/supported_languages.html
@@ -19,10 +19,10 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-153541-6', 'brainwy.github.io');
+        
+          ga('create', 'UA-153541-6', 'auto');
           ga('send', 'pageview');
-
+        
         </script>
         <!-- end tracking -->
 
@@ -50,7 +50,8 @@
 <p><a href="templates.html">&nbsp;&nbsp;&nbsp;&nbsp;Templates</a></p>
 <p><a href="spell_checking.html">&nbsp;&nbsp;&nbsp;&nbsp;Spell Checking</a></p>
 <p><a href="customize_javascript.html">JavaScript editor customization</a></p>
-<p><a href="customize_html.html">HTML editor customization</a></p><br><br><br>
+<p><a href="customize_html.html">HTML editor customization</a></p>
+<p><a href="customize_yaml.html">YAML editor customization</a></p><br><br><br>
 <p><small>Copyright 2013-2014 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
             </header>
