Added SWREG to the available payment options.

--- a/buy.html
+++ b/buy.html
@@ -65,49 +65,45 @@
             </header>
             <section>
                 
-        <h3>What is LiClipse?</h3>
+    	<br/>
 
-        <p>LiClipse is a set of plugins to enhance Eclipse and improve the overall Eclipse experience.
-        It includes improved IDE theming, builtin editors for many languages (and a way to easily create new
-        editors without delving into actual Java coding), usability improvements for all Eclipse editors,
-        packaging of some common existing plugins and installers which are natively integrated into each platform.</p>
-
-        <h3>Why is it named LiClipse?</h3>
-
-        <p>LiClipse is a short for Lightweight Eclipse.</p>
-
-        <h3>Is it a fork of Eclipse?</h3>
-
-        <p>No, LiClipse is not a fork of Eclipse (nor does it intend to be). Also, it should work well with
-        existing plugins and can be installed in an existing Eclipse installation.</p>
-
-        <p>Now, having said that, it does have some overlap when it comes down to supported languages.</p>
-
-        <p>Usually, in Eclipse, you have to install a new plugin for each language you're working with,
-        which does add more weight to an existing Eclipse installation,
-        so, one of its targets is  that you'll only need to install more advanced editor plugins
-        if it's one of your main languages and you're really in need of its features
-        as the more commom features such as syntax highlighting, outline, comment/uncomment and even basic code-completion
-        can be provided through LiClipse adding very little weight to an Eclipse install.</p>
-
-        <p>Still it's interesting to note that LiClipse does intend to offer advanced support for
-        some languages. As an example, its HTML editor already offers support such as
-        code-analysis, context-aware code-completion and embedded languages in script tags
-        (i.e.: Javascript and CSS inside HTML), aiming to become one of the best in its class.</p>
+		<h3>Buy LiClipse</h3>
+    	<strong>Pricing</strong>: A LiClipse license is US$ 80<br>
+    	<br/>
+    	Licenses may be purchased using SWREG or Paypal and will be delivered to e-mail
+    	specified during the checkout process.<br>
+    	<br>
+    	<br>
+		<h3>Buy Single User</h3>
 
 
-        <h3>What about the crowdfunding?</h3>
+        <a href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-1&v=0&d=0&q=1">
+        <img border="0" alt="Buy Single User with SWREG" src="images/buy_swreg.png" width="178" height="104"></a>
 
-        <p>
-            The crowdfunding for LiClipse is now finished -- it can still be seen at:
-            <a href="http://www.indiegogo.com/projects/pydev-and-liclipse-for-a-fast-sexy-and-dark-eclipse">Indiegogo campaign page</a>.
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-        </p>
-
-
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NJW4VEJQZ36GJ">
+        <img border="0" alt="Buy Single User with Paypal" src="images/buy_paypal.png" width="178" height="104"></a><br/>
 
 
+		<br/>
+		<br/>
+		<h3>Buy Multi User</h3>
 
+        <a href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-2&v=0&d=0&q=1">
+        <img border="0" alt="Buy Multi User with SWREG" src="images/buy_swreg.png" width="178" height="104"></a>
+
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=G5APKLQNXK7DL">
+        <img border="0" alt="Buy Multi User with Paypal" src="images/buy_paypal.png" width="178" height="104"></a><br/>
+        <br/>
+        <br/>
+    	Note: your license should be delivered within a day after your purchase is completed (remember
+    	to check your spam folder too). If you don't find it within that timeframe,
+    	please contact fabiofz (at) gmail (dot) com.
+    	<br/>
+    	<br/>
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
