--- a/license.html
+++ b/license.html
@@ -54,22 +54,13 @@
 <ul class="top2">
     <li class="lifull"><a href="download.html">Get it<strong>Download</strong></a></li>
 </ul>
-
 <ul class="top3">
-    <li class="lifull">
-    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=NJW4VEJQZ36GJ">Help to make better<strong>Buy Single User</strong></a>
-    </li>
-</ul>
-
-<ul class="top4">
-    <li class="lifull">
-    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=G5APKLQNXK7DL">For Organizations<strong>Buy Multi User</strong></a>
-    </li>
+    <li class="lifull"><a href="buy.html">Help to make better<strong>Buy</strong></a></li>
 </ul>
 
 
-Pricing: A LiClipse license is US$ 80<br><br><br>
-<p><small>Copyright 2013-2014 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+
+<p><small>Copyright 2013-2015 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
             </header>
             <section>
@@ -180,7 +171,7 @@ ENTIRE AGREEMENT.<br/>
 You agree that this Agreement expresses the entire understanding between you and BRAINWY SOFTWARE LTDA-ME, and supersedes all other communications, oral or written,
 relating to the Software.<br/>
 <br/>
-COPYRIGHT 20013-2014 BRAINWY SOFTWARE LTDA-ME<br/>
+COPYRIGHT 20013-2015 BRAINWY SOFTWARE LTDA-ME<br/>
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
