Updated appearance of buttons.

--- a/scripts/buy.html
+++ b/scripts/buy.html
@@ -10,31 +10,38 @@
     	Licenses may be purchased using SWREG or Paypal and will be delivered to e-mail
     	specified during the checkout process.<br>
     	<br>
-    	<br>
 		<h3>Buy Single User</h3>
 
+		<ul class="libutton">
+        <li class="libutton"><a class="libutton" href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-1&v=0&d=0&q=1">
+        Click to buy using<strong class="libutton">SWREG</strong>
+        </a>
+        </li>
+    	</ul>
 
-        <a href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-1&v=0&d=0&q=1">
-        <img border="0" alt="Buy Single User with SWREG" src="images/buy_swreg.png" width="178" height="104"></a>
-
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NJW4VEJQZ36GJ">
-        <img border="0" alt="Buy Single User with Paypal" src="images/buy_paypal.png" width="178" height="104"></a><br/>
-
-
-		<br/>
+		<ul class="libutton">
+        <li class="libutton"><a class="libutton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NJW4VEJQZ36GJ">
+        Click to buy using<strong class="libutton">Paypal</strong>
+        </a>
+        </li>
+    	</ul>
 		<br/>
 		<h3>Buy Multi User</h3>
 
-        <a href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-2&v=0&d=0&q=1">
-        <img border="0" alt="Buy Multi User with SWREG" src="images/buy_swreg.png" width="178" height="104"></a>
+		<ul class="libutton">
+        <li class="libutton"><a class="libutton" href="https://www.swreg.org/cgi-bin/s.cgi?s=146156&lnk=http%3A//www.liclipse.com&x=1&bb=1&p=146156-2&v=0&d=0&q=1">
+        Click to buy using<strong class="libutton">SWREG</strong>
+        </a>
+        </li>
+    	</ul>
 
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<ul class="libutton">
+        <li class="libutton"><a class="libutton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=G5APKLQNXK7DL">
+        Click to buy using<strong class="libutton">Paypal</strong>
+        </a>
+        </li>
+    	</ul>
 
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=G5APKLQNXK7DL">
-        <img border="0" alt="Buy Multi User with Paypal" src="images/buy_paypal.png" width="178" height="104"></a><br/>
-        <br/>
         <br/>
     	Note: your license should be delivered within a day after your purchase is completed (remember
     	to check your spam folder too). If you don't find it within that timeframe,
