--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
         </p>
         <p><img src="images/theming.png"></p>
 
+        <h3>Release Highlights for LiClipse 1.4.0</h3>
+        <ul>
+        	<strong>Themed scrollbars</strong>
+        	<ul>
+        		<li>May be enabled at preferences > general > appearance > color theme > apply scrollbars theming customization</li>
+        		<li>Turned on by default on Windows</li>
+        		<li>Affects all StyledTexts (including editors and console)</li>
+        		Image showing themed scrollbars:
+        		<br/>
+        		<br/>
+	        	<p><img src="images/liclipse_scroll.png"></p>
+        	</ul>
+
+        	<li>The default encoding for all platforms is now UTF-8</li>
+        	<li>PyDev was upgraded to 3.9.2</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 1.3.0</h3>
         <ul>
         	<li>YAML: syntax errors are now reported for YAML.</li>
