Added support for Nim.

--- a/customize_javascript.html
+++ b/customize_javascript.html
@@ -59,7 +59,9 @@
                 
         It's possible to customize the JavaScript editor JSHint/Beautify.js integration by creating a custom <strong>.javascript.liclipseprefs</strong> file.<br/>
         <br/>
-        The customization must be done per-project by creating a file such as:<br/>
+        Note: if you wish to use a different jshint.js/beautify.js, you can specify the location to be used in preferences > LiClipse > Javascript.<br/>
+        <br/>
+        As for the customization of JSHint/Beautify.js, it must be done per-project by creating a file such as:<br/>
         <br/>
             <strong>project/.settings/.javascript.liclipseprefs</strong><br/>
             <br/>
