--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -32,6 +32,7 @@
             <li>StringTemplate <strong>(new on 1.1.1)</strong></li>
             <li>XML</li>
             <li>YAML <strong>(new on 1.1.1)</strong></li>
+            <li>Nim <strong>(new on 2.0)</strong></li>
         </ul>
     </body>
 </html>
