--- a/launch.html
+++ b/launch.html
@@ -88,6 +88,7 @@ launch: {
         start: 1, #i.e.: start the hyperlink on 'File' (group 1 of the hyperlink).
         filename: 2, #i.e.: group 2 of the regexp has the filename.
         line: 3, #i.e.: group 1 of the regexp has the line in the file.
+        end: 3, #i.e.: end of group 3 of the regexp is the end of the hyperlink (optional).
     }
 }
       </code></pre>
