Added support for Go.

--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -33,6 +33,7 @@
             <li>XML</li>
             <li>YAML <strong>(new on 1.1.1)</strong></li>
             <li>Nim <strong>(new on 2.0)</strong></li>
+            <li>Go <strong>(new on 2.0)</strong></li>
         </ul>
     </body>
 </html>
