--- a/buy.html
+++ b/buy.html
@@ -68,10 +68,19 @@
     	<br/>
 
 		<h3>Buy LiClipse</h3>
-    	<strong>Pricing</strong>: A LiClipse license is US$ 80<br>
+    	<strong>Pricing</strong>: A LiClipse license is US$ 80 (and renewing it is US$ 40)<br>
+    	<br/>
+    	See the <a href="license.html">License terms</a> for details.
+    	<br/>
     	<br/>
     	Licenses may be purchased using SWREG or Paypal and will be delivered to e-mail
     	specified during the checkout process.<br>
+    	<br>
+    	To renew an existing license, please access:<br/><a href="https://sw-brainwy.rhcloud.com/renew_liclipse_licence/">https://sw-brainwy.rhcloud.com/renew_liclipse_licence/</a>
+    	<br>
+    	<br>
+    	To buy a new license, choose one of the options below.
+    	<br>
     	<br>
 		<h3>Buy Single User</h3>
 
