--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li>Improved theming support based on Eclipse 4 improvements</li>
             <li>A fast editor supporting many languages builtin. <a href="languages.html">View supported languages.</a></li>
             <li>A simple way to add support for a new language</li>
-            <li>Usability improvements for all Eclipse editors (such as multi-edition and vertical indent guides)</li>
+            <li>Usability improvements for all Eclipse editors (such as multiple cursors, vertical indent guides and themed scrollbars)</li>
             <li>Bundling of many useful plugins in a single package</li>
             <li>Native installers</li>
         </ul>
@@ -82,6 +82,28 @@
         </p>
         <p><img src="images/theming.png"></p>
 
+        <h3>Release Highlights for LiClipse 2.0.0</h3>
+       	<ul>
+       		<li>Currently in Beta (based on Eclipse 4.5M6)</li>
+       		<ul>
+       			<li>Searches (Ctrl+Shift+G in LiClipse editors) are much faster in Eclipse 4.5M6!</li>
+       		</ul>
+       		<li>Nim is now supported</li>
+       		<li>Go is now supported</li>
+       		<li>Jinja2 is now supported</li>
+       		<li>WorkspaceMechanic was replaced with Oomph</li>
+   			<li>JavaScript editor:</li>
+       		<ul>
+	       		<li>It's possible to specify the jshint.js and beautify.js location in preferences > LiClipse > Javascript</li>
+	       		<li>The code-formatting settings may be tweaked (see: <a href="customize_javascript.html">Customize Javascript</a> for details</li>
+	       		<li>Fixed some syntax highlighting glitches (related to handling of Regular expressions)</li>
+	       		<li>Added some missing keywords to the JavaScript definition</li>
+       		</ul>
+       		<li>Mako had some improvements in the highlighting</li>
+       		<li>Multi-page editors (such as the plugins manifest editor) now also have multiple cursors and vertical indent guides support</li>
+       		<li>Updated EGit, PyDev and AnyEdit</li>
+       	</ul>
+        
         <h3>Release Highlights for LiClipse 1.4.0</h3>
         <ul>
         	<strong>Themed scrollbars</strong>
@@ -97,36 +119,6 @@
 
         	<li>The default encoding for all platforms is now UTF-8</li>
         	<li>PyDev was upgraded to 3.9.2</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 1.3.0</h3>
-        <ul>
-        	<li>YAML: syntax errors are now reported for YAML.</li>
-        	<li>It's now possible to open an external editor passing the line. The pattern accepted is "LiClipse filename+line:col"</li>
-        	<li>PyDev was upgraded to 3.9.1.</li>
-        	<li>Eclipse was upgraded to 4.4.1.</li>
-        	<li>The bundled java was upgraded to Java 8.</li>
-        </ul>
-
-        <h3>Release Highlights for LiClipse 1.2.1</h3>
-        <ul>
-            <strong>Indent Guides</strong>
-            <ul>
-                <li>Vertical indent guides are now available (applied to all Eclipse editors by default)</li>
-                <li>Options may be configured at Preferences > LiClipse > Vertical Indent Guide</li>
-            </ul>
-            <li>Upgraded to PyDev 3.9.0</li>
-        </ul>
-        <h3>Release Highlights for LiClipse 1.2.0</h3>
-        <ul>
-            <li>It's now possible to specify the JSHint configuration for a project. View <a href="customize_javascript.html">JavaScript editor customization for details</a></li>
-            <li>It's now possible to specify the HTML code analysis/code formatting configuration for a project. View <a href="customize_html.html">HTML editor customization for details</a></li>
-            <li>JSHint updated to the latest version (2.5.4)</li>
-            <li>Regular expressions on javascript are now properly colored</li>
-            <li>The Javascript editor now supports ES6 (EcmaScript 6) constructs (but JSHint analysis must be manually configured to accept those constructs)</li>
-            <li>AnyEdit no longer removing trailing chars by default (only for LiClipse standalone)</li>
-            <li>Upgraded to PyDev 3.8.0</li>
-            <li>Upgraded to latest EGit</li>
         </ul>
 
         <p><a href="history.html">View highlights for previous releases</a></p>
