--- a/languages.html
+++ b/languages.html
@@ -68,24 +68,26 @@
         <h3>Languages supported</h3>
         <p>LiClipse supports many languages out of the box:</p>
         <ul>
-            <li>CoffeScript</li>
             <li>C/C++</li>
+            <li>CoffeScript</li>
             <li>CSS</li>
-            <li>Dart <strong>(new on 0.9.0)</strong></li>
+            <li>Dart</li>
             <li>Django Templates</li>
+            <li>Go <strong>(new on 2.0)</strong></li>
             <li>HTML</li>
-            <li>Java <strong>(new on 0.9.5)</strong></li>
+            <li>Java</li>
             <li>JavaScript</li>
-            <li>Julia <strong>(new on 1.0.0)</strong></li>
-            <li>Kivy Language <strong>(new on 0.9.7)</strong></li>
-            <li>Mako Templates <strong>(new on 0.9.0)</strong></li>
+            <li>Jinja2 <strong>(new on 2.0)</strong></li>
+            <li>Julia</li>
+            <li>Kivy Language</li>
+            <li>Mako Templates</li>
+            <li>Nim <strong>(new on 2.0)</strong></li>
             <li>Python</li>
             <li>RST (ReStructured Text)</li>
             <li>SCSS</li>
-            <li>StringTemplate <strong>(new on 1.1.1)</strong></li>
+            <li>StringTemplate</li>
             <li>XML</li>
-            <li>YAML <strong>(new on 1.1.1)</strong></li>
-            <li>Nim <strong>(new on 2.0)</strong></li>
+            <li>YAML</li>
         </ul>
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
