--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,54 @@
     </head>
     <body>
     <h3>Releases history</h3>
+        <h3>Release Highlights for LiClipse 2.0.0</h3>
+       	<ul>
+       		<li>Currently in Beta (based on Eclipse 4.5M6)</li>
+       		<ul>
+       			<li>Searches (Ctrl+Shift+G in LiClipse editors) are much faster in Eclipse 4.5M6!</li>
+       		</ul>
+       		<li>Nim is now supported</li>
+       		<li>Go is now supported</li>
+       		<li>Jinja2 is now supported</li>
+       		<li>WorkspaceMechanic was replaced with Oomph</li>
+   			<li><strong>JavaScript editor:</strong></li>
+       		<ul>
+	       		<li>It's possible to specify the jshint.js and beautify.js location in preferences > LiClipse > Javascript</li>
+	       		<li>The code-formatting settings may be tweaked (see: <a href="customize_javascript.html">Customize Javascript</a> for details</li>
+	       		<li>Fixed some syntax highlighting glitches (related to handling of Regular expressions)</li>
+	       		<li>Added some missing keywords to the JavaScript definition</li>
+       		</ul>
+       		<li>Mako had some improvements in the highlighting</li>
+       		<li>Multi-page editors (such as the plugins manifest editor) now also have multiple cursors and vertical indent guides support</li>
+       		<li>Updated EGit, PyDev and AnyEdit</li>
+       	</ul>
+    
+        <h3>Release Highlights for LiClipse 1.4.0</h3>
+        <ul>
+        	<strong>Themed scrollbars</strong>
+        	<ul>
+        		<li>May be enabled at preferences > general > appearance > color theme > apply scrollbars theming customization</li>
+        		<li>Turned on by default on Windows</li>
+        		<li>Affects all StyledTexts (including editors and console)</li>
+        		Image showing themed scrollbars:
+        		<br/>
+        		<br/>
+	        	<p><img src="images/liclipse_scroll.png"></p>
+        	</ul>
+
+        	<li>The default encoding for all platforms is now UTF-8</li>
+        	<li>PyDev was upgraded to 3.9.2</li>
+        </ul>
+
+        <h3>Release Highlights for LiClipse 1.3.0</h3>
+        <ul>
+        	<li>YAML: syntax errors are now reported for YAML</li>
+        	<li>It's now possible to open an external editor passing the line. The pattern accepted is "LiClipse filename+line:col"</li>
+        	<li>PyDev was upgraded to 3.9.1</li>
+        	<li>Eclipse was upgraded to 4.4.1</li>
+        	<li>The bundled java was upgraded to Java 8</li>
+        </ul>
+        
         <h3>Release Highlights for LiClipse 1.2.1</h3>
         <ul>
             <strong>Indent Guides</strong>
