Updated download page.

--- a/download.html
+++ b/download.html
@@ -65,9 +65,13 @@
             </header>
             <section>
                 
-        LiClipse can be downloaded as an update site to be installed on a base Eclipse install or as a native installer (recommended), which provides a pre-configured
+    	<h1>Installing LiClipse</h1>
+    	The recommended way of using LiClipse is by downloading the native installer for your platform, which provides a pre-configured
         standalone for Windows (32 bits or 64 bits), Mac OS (64 bits) or Linux (32 bits or 64 bits).
-
+        <br/>
+        <br/>
+        However, it's also possible to install it through the update site:<br/><a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a><br/>
+        (note that you must have Java 7 installed in this case -- see details on the Update Site Install section).
         <br/>
         <br/>
 
@@ -228,7 +232,7 @@
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
         <a href="https://googledrive.com/host/0BwwQN8QrgsRpLVlDeHRNemw3S1E">Google Drive</a>,
-        extract it in a folder, then,
+        extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
         <br/>
@@ -238,8 +242,8 @@
         <br/>
 
         and on the dialog add the folder where you extracted the update site contents,
-        select all the items and follow the wizard (<strong>note</strong>: you may have to uncheck "<strong>group
-        items by category</strong>" in order to see the items to be installed)..
+        select all the items and follow the wizard (<strong>note</strong>: you may want uncheck "<strong>group
+        items by category</strong>" if you want to get the LiClipse RCP application too)..
         <br/>
         <br/>
 
