--- a/download.html
+++ b/download.html
@@ -274,7 +274,7 @@
         <h3>Requirement: uninstall conflicting bundles</h3>
 
         Note that if you have some of the bundled plugins in Eclipse (i.e.: PyDev, AnyEdit, ColorTheme,
-        StartExplorer, WorkspaceMechanic, Egit) you may have to uninstall it before installing LiClipse.
+        StartExplorer, Egit) you may have to uninstall it before installing LiClipse.
         <br/>
         <br/>
 
