--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </p>
         <h3>Bundling of other useful plugins</h3>
         <p>Eclipse has a myriad of useful plugins, and LiClipse bundles some which are considered to be useful
-            regardless of which language you're dealing with: Workspace Mechanic, Eclipse Color Theme, StartExplorer, AnyEdit and PyDev
+            regardless of which language you're dealing with: Eclipse Color Theme, StartExplorer, AnyEdit and PyDev
             (note that PyDev does not follow the rule of being useful for everyone as the other plugins,
             but LiClipse itself reuses parts of the PyDev codebase).
         </p>
