--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -27,14 +27,21 @@
             <li>Jinja2 <strong>(new on 2.0)</strong></li>
             <li>Julia</li>
             <li>Kivy Language</li>
+            <li>Ruby <strong>(new on 2.1.0)</strong></li>
             <li>Mako Templates</li>
+            <li>Markdown <strong>(new on 2.1.0)</strong></li>
             <li>Nim <strong>(new on 2.0)</strong></li>
             <li>Python</li>
+            <li>PHP <strong>(new on 2.1.0)</strong></li>
             <li>RST (ReStructured Text)</li>
             <li>SCSS</li>
             <li>StringTemplate</li>
             <li>XML</li>
             <li>YAML</li>
         </ul>
+        <p>
+        Additionally, since LiClipse 2.1.0, TextMate bundles are also supported, 
+        which means that lots of other languages can also be easily added to LiClipse.
+        </p>
     </body>
 </html>
