Help/homepage for 2.1.0.

--- a/languages.html
+++ b/languages.html
@@ -97,6 +97,9 @@
         Additionally, since LiClipse 2.1.0, TextMate bundles are also supported, 
         which means that lots of other languages can also be easily added to LiClipse.
         </p>
+        <p>
+            See <a href="textmate_bundles.html">TextMate Bundles Integration</a> for more details.
+        </p>
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
