--- a/scripts/history.html
+++ b/scripts/history.html
@@ -13,6 +13,19 @@
     </head>
     <body>
     <h3>Releases history</h3>
+    
+        <h3>Release Highlights for LiClipse 2.1.0</h3>
+        <ul>
+            <li>Support for <a href="textmate_bundles.html">TextMate Bundles</a></li>
+            <li>PHP is now supported</li>
+            <li>Ruby is now supported</li>
+            <li>Markdown is now supported</li>
+            <li>Workspace Mechanic is no longer bundled by default in LiClipse</li>
+            <li>Improved theming</li>
+            <li>Standalone based on Eclipse 4.5rc2a</li>
+       		<li>Updated EGit and PyDev</li>
+        </ul>
+    
         <h3>Release Highlights for LiClipse 2.0.0</h3>
        	<ul>
        		<li>Nim is now supported</li>
