--- a/scripts/index.html
+++ b/scripts/index.html
@@ -15,20 +15,26 @@
         <h3>LiClipse provides a new experience for Eclipse users</h3>
         <p>With it, users get out of the box:</p>
         <ul>
-            <li>Improved theming support based on Eclipse 4 improvements</li>
-            <li>A fast editor supporting many languages builtin. <a href="languages.html">View supported languages.</a></li>
+            <li>A fast editor supporting many languages builtin. <a href="languages.html">View supported languages</a></li>
+            <li>Support for TextMate Bundles. <a href="textmate_bundles.html">View TextMate Bundles Integration</a></li>
             <li>A simple way to add support for a new language</li>
             <li>Usability improvements for all Eclipse editors (such as multiple cursors, vertical indent guides and themed scrollbars)</li>
-            <li>Bundling of many useful plugins in a single package</li>
             <li>Native installers</li>
+            <li>
+                Improved theming support based on Eclipse 4 improvements<br/>
+                <br/>
+                <p><img src="images/theming.png"></p>
+            </li>
         </ul>
-        <h3>Theming support based on Eclipse 4 improvements</h3>
-        <p>Bundling of the Eclipse Color Theme plugin helps in keeping colors consistent among all editors,
-            and LiClipse applies the color theme chosen to other parts of the IDE,
-            allowing for dark themes that are kind to your eyes.
-        </p>
-        <p><img src="images/theming.png"></p>
 
+        <h3>Release Highlights for LiClipse 2.1.0</h3>
+        <ul>
+            <li>PHP is now supported</li>
+            <li>Ruby is now supported</li>
+            <li>Markdown is now supported</li>
+            <li>Support for <a href="textmate_bundles.html">TextMate Bundles</a></li>
+        </ul>
+        
         <h3>Release Highlights for LiClipse 2.0.0</h3>
        	<ul>
        		<li>Nim is now supported</li>
@@ -46,25 +52,8 @@
        		<li>Updated EGit, PyDev and AnyEdit</li>
        	</ul>
 
-        <h3>Release Highlights for LiClipse 1.4.0</h3>
-        <ul>
-        	<strong>Themed scrollbars</strong>
-        	<ul>
-        		<li>May be enabled at preferences > general > appearance > color theme > apply scrollbars theming customization</li>
-        		<li>Turned on by default on Windows</li>
-        		<li>Affects all StyledTexts (including editors and console)</li>
-        		Image showing themed scrollbars:
-        		<br/>
-        		<br/>
-	        	<p><img src="images/liclipse_scroll.png"></p>
-        	</ul>
-
-        	<li>The default encoding for all platforms is now UTF-8</li>
-        	<li>PyDev was upgraded to 3.9.2</li>
-        </ul>
-
         <p><a href="history.html">View highlights for previous releases</a></p>
-        <p>All those languages feature syntax highlighting, template completion,
+        <p>Supported languages feature syntax highlighting, template completion,
             outline, select/deselect scope, comment/uncomment, auto-indent, linked edition,
             multi-edition, mark occurrences, among others.
         </p>
