--- a/customize_html.html
+++ b/customize_html.html
@@ -52,7 +52,8 @@
 <p><a href="spell_checking.html">&nbsp;&nbsp;&nbsp;&nbsp;Spell Checking</a></p>
 <p><a href="customize_javascript.html">JavaScript editor customization</a></p>
 <p><a href="customize_html.html">HTML editor customization</a></p>
-<p><a href="customize_yaml.html">YAML editor customization</a></p><br><br><br>
+<p><a href="customize_yaml.html">YAML editor customization</a></p>
+<p><a href="textmate_bundles.html">TextMate Bundles integration</a></p><br><br><br>
 <p><small>Copyright 2013-2015 - Brainwy Software Ltda.<br/>Hosted on GitHub Pages - Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
             </header>
