--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -43,5 +43,8 @@
         Additionally, since LiClipse 2.1.0, TextMate bundles are also supported, 
         which means that lots of other languages can also be easily added to LiClipse.
         </p>
+        <p>
+            See <a href="textmate_bundles.html">TextMate Bundles Integration</a> for more details.
+        </p>
     </body>
 </html>
