--- a/languages.html
+++ b/languages.html
@@ -67,7 +67,15 @@
             <section>
                 
         <h3>Languages supported</h3>
-        <p>LiClipse supports many languages out of the box:</p>
+        <p>
+        From version 2.1.0 onwards, LiClipse also supports TextMate bundles by adding a '.zip' file 
+        renamed to '.tmbundle' to a tracked folder, which means it can currently support
+        a huge number of languages.
+        </p>
+        <p>
+            See <a href="textmate_bundles.html">TextMate Bundles Integration</a> for more details.
+        </p>
+        <p>Out of the box it provides support for:</p>
         <ul>
             <li>C/C++</li>
             <li>CoffeScript</li>
@@ -93,13 +101,6 @@
             <li>XML</li>
             <li>YAML</li>
         </ul>
-        <p>
-        Additionally, since LiClipse 2.1.0, TextMate bundles are also supported, 
-        which means that lots of other languages can also be easily added to LiClipse.
-        </p>
-        <p>
-            See <a href="textmate_bundles.html">TextMate Bundles Integration</a> for more details.
-        </p>
     
                 <!-- <pre><code>$ cd your_repo_root/repo_name
                     $ git fetch origin
