--- a/scripts/index.html
+++ b/scripts/index.html
@@ -15,7 +15,7 @@
         <h3>LiClipse provides a new experience for Eclipse users</h3>
         <p>With it, users get out of the box:</p>
         <ul>
-            <li>A fast editor supporting many languages builtin. <a href="languages.html">View supported languages</a></li>
+            <li>A fast editor supporting many languages out of the box. <a href="languages.html">View supported languages</a></li>
             <li>Support for TextMate Bundles. <a href="textmate_bundles.html">View TextMate Bundles Integration</a></li>
             <li>A simple way to add support for a new language</li>
             <li>Usability improvements for all Eclipse editors (such as multiple cursors, vertical indent guides and themed scrollbars)</li>
@@ -29,10 +29,10 @@
 
         <h3>Release Highlights for LiClipse 2.1.0</h3>
         <ul>
+            <li>Support for <a href="textmate_bundles.html">TextMate Bundles</a></li>
             <li>PHP is now supported</li>
             <li>Ruby is now supported</li>
             <li>Markdown is now supported</li>
-            <li>Support for <a href="textmate_bundles.html">TextMate Bundles</a></li>
         </ul>
         
         <h3>Release Highlights for LiClipse 2.0.0</h3>
