--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -13,7 +13,15 @@
     </head>
     <body>
         <h3>Languages supported</h3>
-        <p>LiClipse supports many languages out of the box:</p>
+        <p>
+        From version 2.1.0 onwards, LiClipse also supports TextMate bundles by adding a '.zip' file 
+        renamed to '.tmbundle' to a tracked folder, which means it can currently support
+        a huge number of languages.
+        </p>
+        <p>
+            See <a href="textmate_bundles.html">TextMate Bundles Integration</a> for more details.
+        </p>
+        <p>Out of the box it provides support for:</p>
         <ul>
             <li>C/C++</li>
             <li>CoffeScript</li>
@@ -39,12 +47,5 @@
             <li>XML</li>
             <li>YAML</li>
         </ul>
-        <p>
-        Additionally, since LiClipse 2.1.0, TextMate bundles are also supported, 
-        which means that lots of other languages can also be easily added to LiClipse.
-        </p>
-        <p>
-            See <a href="textmate_bundles.html">TextMate Bundles Integration</a> for more details.
-        </p>
     </body>
 </html>
